spacing fix in home.html

--- a/styles/home-style.css
+++ b/styles/home-style.css
@@ -150,11 +150,11 @@ body {
 .homeLeftMiddle {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 0.5em;
-    row-gap: 0.5em;
+    column-gap: 1em;
+    row-gap: 0.75em;
 
     text-align: center;
-    margin-bottom: 0.5em;
+    /* margin-bottom: 0.5em; */
 }
 .homeLeft {
     text-align: left;
@@ -202,7 +202,12 @@ body {
         max-width: 100%;
     }
     .homeLeftMiddle {
-        margin-bottom: 0;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 1em;
+        row-gap: 0.75em;
+    
+        text-align: center;
     }
     .homeRight button {
         padding: 1em 2.5em;
